--- a/index.css
+++ b/index.css
@@ -284,132 +284,9 @@ input:disabled {
 }
 
 @media screen and (min-width: 1920px) {
-    * {}
-    
-    html {
-        font-size: 10px;
-    }
-    
-    body {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 0;
-        margin: 0;
-    }
-    
-    .header, .footer {
-        display: flex;
-        flex-direction: row;
+
+    .levelup__attribute {
         justify-content: space-evenly;
-        align-items: center;
-        height: 128px;
-        color: white;
-        border: var(--border);
-        border-image: var(--border-image);
     }
     
-    .header__attributes, .footer__stats {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 15vw;
-        height: 5vh;
-        padding: 0 .5em;
-        border: .25vw solid gray;
-        border-radius: 10px;
-        color: black;
-        font-size: 1.8rem;
-        background: white url("") no-repeat left center;
-    }
-    
-        .header__attributes > input, .footer__stats > input {
-            width: 80%;
-            height: 3vh;
-            font-size: 1.8rem;
-            color: black;
-            border: none;
-            background-color: inherit;
-        }
-    
-        /* attributes */
-            .attributes--level {
-    
-            }
-    
-            .attributes--health {
-    
-            }
-    
-            .attributes--attack {
-    
-            }
-    
-            .attributes--defence {
-    
-            }
-    
-            .attributes--agility {
-    
-            }
-    
-            .attributes--crit {
-    
-            }
-        /* */
-    
-    /* Main */
-    .main {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        height: calc(100vh - 256px);
-        color: black;
-        background-color: white;
-    }
-    
-        .main__levelup {
-            display: none;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            width: 320px;
-            height: 60%;
-            position: absolute;
-            border: var(--border);
-            border-image: var(--border-image);
-        }
-    
-            .levelup__title {
-    
-            }
-    
-            .levelup__button {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                min-height: 50px;
-                height: auto;
-                min-width: 50px;
-                width: 80%;
-                font-size: 1.4rem;
-                border: var(--border);
-                border-image: var(--border-image);
-                position: absolute;
-            }
-    
-        .actor {
-            height: 80%;
-            width: 20%;
-            border-radius: 2rem;
-        }
-    
-            [data-actor="pc"] {
-                background-color: lightgreen;
-            }
-    
-            [data-actor="npc"] {
-                background-color: darkred;
-            }
 }
